# SoapyNetSDR

./: CMakeLists.txt  Changelog.txt  InterfacesUnix.cpp  InterfacesWindows.cpp  NetSDR_Registration.cpp  NetSDR_Settings.cpp  NetSDR_Streaming.cpp  README.md  SoapyNetSDR.hpp  SocketDefs.h
.github/workflows/: build.yml
